#F-261 Fixed Use "Math.clamp" instead of "Math.min" or "Math.max"